tests/compile-fail/integration_suite__integration__ecl_features__diff_switch_too_many_cases.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: too many cases in diff switch
   ┌─ <input>:10:10
   │
10 │     I0 = (2::::::::);
   │          ^^^^^^^^^^^ 9 cases
   │
   = difficulty masks are only 8 bits wide


